--- a/.github/workflows/tests_and_checks.yml
+++ b/.github/workflows/tests_and_checks.yml
@@ -16,12 +16,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         rust-toolchain:
           - stable
           - nightly
           # minimum version
-          - 1.67
+          - 1.68
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Repository
